# tensorrt-face-detect

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
include/: facedetectionapp.h  tensorrtrunner.h
src/: facedetectionapp.cpp  tensorrtrunner.cpp
